<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/black"
        android:elevation="1dp"
        android:text="@string/categories"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/textView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <Button
                android:id="@+id/BtnYoutube"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:onClick="Next"
                android:text="@string/next1"
                android:textColor="#00ffffff"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/imYoutube"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/picture_of_youtube"
                android:padding="0dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/tube" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/youtube_video_creator"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <Button
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"

                android:onClick="Next"
                android:text="@string/next2"
                android:textColor="#00ffffff"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/mic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/micpic"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/mic" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:text="@string/home_artist"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <Button
                android:id="@+id/btnEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:onClick="Next"
                android:text="@string/next3"
                android:textColor="#00ffffff"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/inEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/event_picture"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/eventorganizer" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:text="Event Planning/Organising"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>